reinit pwa and refactoring of services

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BjBygg</title>
+  <title>BjBygg v2</title>
   <base href="/">
   <!--base href="/kbtvAngularLive/"-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body class="bg-1">
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWZmwjGN92B3PoNS6x6qpOmc3xrP55d8&libraries=places&language=no"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWZmwjGN92B3PoNS6x6qpOmc3xrP55d8&amp;libraries=places&amp;language=no"></script>
+  <noscript>
+    For å bruke nettsiden må du aktivere Javascript.
+    Her finner du <a href="https://www.enable-javascript.com/no/">
+    instruksjoner for hvordan du aktiverer Javascript i nettleseren</a>.</noscript>
 </body>
 </html>
