new light theme -partially done

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>BjBygg v2</title>
-  <base href="/">
-  <!--base href="/kbtvAngularLive/"-->
+  <!--base href="/"-->
+  <base href="/kbtvAngularLive/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#212121">
 </head>
-<body class="bg-1">
+<body class="background-color">
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWZmwjGN92B3PoNS6x6qpOmc3xrP55d8&amp;libraries=places&amp;language=no"></script>
   <noscript>
