moved mission form to seperate module

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <!--base href="/kbtvAngularLive/"-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
   <link rel="manifest" href="manifest.webmanifest">
@@ -43,7 +43,7 @@
       <span class="init-spinner">&nbsp;</span>
     
   </app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWZmwjGN92B3PoNS6x6qpOmc3xrP55d8&amp;libraries=places&amp;language=no"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWZmwjGN92B3PoNS6x6qpOmc3xrP55d8&amp;libraries=places&amp;language=no" async defer></script>
   <noscript>
     For å bruke nettsiden må du aktivere Javascript.
     Her finner du <a href="https://www.enable-javascript.com/no/">
