--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
+
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.esm.js" version></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.js"></script>
+
   <meta name="theme-color" content="#212121">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <style>
