--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <style>
     body{
-      background:#d7ccc8;
+      background:#cfd8dc;
     }
     @keyframes spinner {
       to {
@@ -34,8 +34,8 @@
     top:calc(50% - 50px);
     left:calc(50% - 50px);
     border-radius: 50%;
-    border: 2px solid #d7ccc8;
-    border-top-color: #6d4c41;
+    border: 2px solid #cfd8dc;
+    border-top-color: #00838f;
     animation: spinner 0.8s linear infinite;
   }
   </style>
