--- a/projects/kbtv-client/src/index.html
+++ b/projects/kbtv-client/src/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <style>
     body{
-      background:#cfd8dc;
+      background:#eceff1;
     }
     @keyframes spinner {
       to {
@@ -34,7 +34,7 @@
     top:calc(50% - 50px);
     left:calc(50% - 50px);
     border-radius: 50%;
-    border: 2px solid #cfd8dc;
+    border: 2px solid #eceff1;
     border-top-color: #00838f;
     animation: spinner 0.8s linear infinite;
   }
