--- a/projects/kbtv-client/src/index.html
+++ b/projects/kbtv-client/src/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <style>
     body{
-      background:#eceff1;
+      background:#006064;
     }
     @keyframes spinner {
       to {
@@ -34,8 +34,8 @@
     top:calc(50% - 50px);
     left:calc(50% - 50px);
     border-radius: 50%;
-    border: 2px solid #eceff1;
-    border-top-color: #00838f;
+    border: 2px solid #006064;
+    border-top-color: white;
     animation: spinner 0.8s linear infinite;
   }
   </style>
