refactor layout with new bottom action bar

--- a/projects/kbtv-client/src/index.html
+++ b/projects/kbtv-client/src/index.html
@@ -18,9 +18,8 @@
   <style>
     body{
       background:#006064;
-      color:white;
     }
-    svg{
+    .loader > svg{
       animation: spinner 3s linear infinite;
       width: 100px;
       height: 100px;
@@ -30,6 +29,7 @@
       top:calc(50% - 77.5px);
       left:calc(50% - 50px);
       text-align:center;
+      color:white;
     }
   </style>
 </head>
