--- a/projects/kbtv-client/src/index.html
+++ b/projects/kbtv-client/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
 
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.esm.js" version></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.js"></script>
