--- a/apps/kbtv-client/src/index.html
+++ b/apps/kbtv-client/src/index.html
@@ -6,12 +6,13 @@
   <base href="/">
   <!--base href="/kbtvAngularLive/"-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
 
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.esm.js" version></script>
-  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.esm.js" version async defer></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.3.2/dist/ionic/ionic.js" async defer></script>
 
   <meta name="theme-color" content="#212121">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -33,7 +34,7 @@
     }
   </style>
 </head>
-<body>
+<body class="mat-typography">
   <app-root>
 
     <div class="loader">
