--- a/apps/kbtv-client/src/index.html
+++ b/apps/kbtv-client/src/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
 
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.6.8/dist/ionic/ionic.esm.js" version async defer></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.6.8/dist/ionic/ionic.js" async defer></script>
